# blockcell

./: .dockerignore  .gitignore  CHANGELOG.en.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  QUICKSTART.md  QUICKSTART.zh-CN.md  README.en.md  README.md  README.zh-CN.md  config.example.json  install.sh  manifest.json  test_provider_config.md  test_wecom.rs  test_wecom_decrypt.py  test_wecom_decrypt.rs
.cargo/: config.toml
.claude/: CODE_REVIEW.md  settings.local.json
crates/channels/: Cargo.toml
crates/channels/src/: account.rs  dingtalk.rs  discord.rs  feishu.rs  lark.rs  lib.rs  manager.rs  rate_limit.rs  slack.rs  telegram.rs  wecom.rs  whatsapp.rs
crates/channels/src/napcat/: channel.rs  event.rs  message.rs  mod.rs  outbound.rs  types.rs
crates/channels/src/napcat/media/: base64_data.rs  detector.rs  direct_http.rs  downloader.rs  local_file.rs  mod.rs  napcat_stream.rs  types.rs
crates/channels/src/napcat/websocket/: client.rs  mod.rs  sender.rs  server.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: cron_service.rs  ghost.rs  heartbeat.rs  job.rs  lib.rs
data/: hub.db  hub.db-shm  hub.db-wal
docs/: 00_index.md  01_what_is_blockcell.md  02_quickstart.md  05_memory_system.md  06_channels.md  08_gateway_mode.md  11_subagents.md  12_architecture.md  15_ghost_agent.md  17_cli_reference.md  18_proxy_and_provider_config.md  19_mcp_servers.md  21_intent_router_profiles.md
plan/: evolution_fix_plan.md
webui/: .env  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
(+226 files in other folders)
