[package]
name = "blockcell-channels"
version = "0.1.0"
edition = "2021"

[dependencies]
blockcell-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
dirs = "5.0"

[features]
default = ["telegram", "whatsapp", "feishu", "slack", "discord"]
telegram = []
whatsapp = []
feishu = []
slack = []
discord = []
